Slight import cleanup.

--- a/scripts/pytorch.ipynb
+++ b/scripts/pytorch.ipynb
@@ -100,158 +100,7 @@
      ]
     }
    ],
-   "source": [
-    "#%pycat main.py\n",
-    "\n",
-    "import os\n",
-    "import shutil\n",
-    "import torch\n",
-    "from torch.autograd import Variable\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "def save_model(\n",
-    "        model,\n",
-    "        optimizer,\n",
-    "        stats,\n",
-    "        it,\n",
-    "        is_best=False,\n",
-    "        fname='model_save.pth.tar'):\n",
-    "    m_state_dict = model.state_dict()\n",
-    "    o_state_dict = optimizer.state_dict()\n",
-    "\n",
-    "    torch.save({\n",
-    "        'it': it,\n",
-    "        'model_state_dict': m_state_dict,\n",
-    "        'optimizer_state_dict': o_state_dict,\n",
-    "        'stats': stats},\n",
-    "        fname)\n",
-    "    if is_best:\n",
-    "        print('new best: ', stats[-1])\n",
-    "        shutil.copyfile(fname, 'model_best.pth.tar')\n",
-    "\n",
-    "\n",
-    "def load_model(model, optimizer, fname='model_best.pth.tar'):\n",
-    "\n",
-    "    if os.path.isfile(fname):\n",
-    "        checkpoint = torch.load(fname)\n",
-    "        it = checkpoint['it']\n",
-    "        model.load_state_dict(checkpoint['model_state_dict'])\n",
-    "        optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
-    "        stats = checkpoint['stats']\n",
-    "        print(\n",
-    "            \"=> loaded checkpoint '{}' (iteration {})\".format(\n",
-    "                fname, checkpoint['it']))\n",
-    "        return it, stats\n",
-    "    else:\n",
-    "        print(\"=> no checkpoint found at '{}'\".format(fname))\n",
-    "        return None, None\n",
-    "\n",
-    "\n",
-    "def validate(model, loader, criterion):\n",
-    "    model.eval()\n",
-    "    running_loss = 0.0\n",
-    "    cnt = 0\n",
-    "    for i, (img, (labels, labels_seg)) in enumerate(loader):\n",
-    "        img, labels_seg = Variable(img), Variable(labels_seg)\n",
-    "        outputs = model(img)\n",
-    "        loss = criterion(outputs, labels_seg)\n",
-    "        running_loss += loss.data[0]\n",
-    "        cnt = cnt + 1\n",
-    "    l = running_loss / cnt\n",
-    "    return l\n",
-    "\n",
-    "\n",
-    "def train(\n",
-    "        train_loader,\n",
-    "        valid_loader,\n",
-    "        model,\n",
-    "        criterion,\n",
-    "        optimizer,\n",
-    "        stats,\n",
-    "        epoch,\n",
-    "        eval_every,\n",
-    "        print_every,\n",
-    "        save_every):\n",
-    "    running_loss = 0.0\n",
-    "    cnt = 0\n",
-    "    global it, best_it, best_loss\n",
-    "    for it, (img, (labels, labels_seg)) in tqdm(enumerate(train_loader, it + 1)):\n",
-    "        img, labels_seg = Variable(img), Variable(labels_seg)\n",
-    "        \n",
-    "        model.train(True)\n",
-    "\n",
-    "        outputs = model(img)\n",
-    "        loss = criterion(outputs, labels_seg)\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        cnt = cnt + 1\n",
-    "\n",
-    "        running_loss += loss.data[0]\n",
-    "        if cnt > 0 and it % eval_every == 0:\n",
-    "\n",
-    "            l = validate(model, valid_loader, criterion)\n",
-    "            stats.append((it, running_loss / cnt, l))\n",
-    "            running_loss = 0.0\n",
-    "\n",
-    "            if cnt > 0 and it % print_every == 0:\n",
-    "                print('[%d, %d]\\ttrain loss: %.3f\\tvalid loss: %.3f' %\n",
-    "                      (epoch, it, stats[-1][1], stats[-1][2]))\n",
-    "            if it % save_every == 0:\n",
-    "                is_best = False\n",
-    "                if best_loss > l:\n",
-    "                    best_loss = l\n",
-    "                    best_it = it\n",
-    "                    is_best = True\n",
-    "                    save_model(\n",
-    "                        model,\n",
-    "                        optimizer,\n",
-    "                        stats,\n",
-    "                        it,\n",
-    "                        is_best,\n",
-    "                        'model_save.pth.tar')\n",
-    "            cnt = 0\n",
-    "    return it, best_loss, best_it\n",
-    "\n",
-    "def baseline(\n",
-    "        train_loader,\n",
-    "        valid_loader,\n",
-    "        criterion,\n",
-    "        it):\n",
-    "    \n",
-    "    m = 0.0\n",
-    "    cnt = 0.0\n",
-    "    for i, (img, (labels, labels_seg)) in enumerate(train_loader):\n",
-    "        if i > it:\n",
-    "            break\n",
-    "        m += labels_seg[0].sum()\n",
-    "        cnt += labels_seg[0].numel()\n",
-    "    m = m / cnt\n",
-    "\n",
-    "    running_loss = 0.0\n",
-    "    \n",
-    "    cnt = 0\n",
-    "    for i, (img, (labels,labels_seg)) in enumerate(valid_loader):\n",
-    "        outputs = labels_seg.clone()        \n",
-    "        outputs = torch.clamp(outputs, m, m)\n",
-    "        img, labels = Variable(img), Variable(labels_seg)\n",
-    "        outputs = Variable(outputs)\n",
-    "    \n",
-    "        loss = criterion(outputs, labels_seg)\n",
-    "\n",
-    "        running_loss += loss.data[0]\n",
-    "        cnt += 1\n",
-    "\n",
-    "    return running_loss/cnt, m\n",
-    "\n",
-    "\n",
-    "def adjust_learning_rate(optimizer, epoch, lr0):\n",
-    "    \"\"\"Sets the learning rate to the initial LR decayed by 10 every 30 epochs\"\"\"\n",
-    "    lr = lr0 * (0.1 ** (epoch // 30))\n",
-    "    for param_group in optimizer.param_groups:\n",
-    "        param_group['lr'] = lr\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -266,216 +115,34 @@
      ]
     }
    ],
-   "source": [
-    "##%%writefile dataset.py\n",
-    "#%pycat dataset.py\n",
-    "\n",
-    "from __future__ import division\n",
-    "import os\n",
-    "import torch\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "import random\n",
-    "import math\n",
-    "from functools import reduce\n",
-    "\n",
-    "from glob import glob\n",
-    "\n",
-    "from torchvision import transforms, utils\n",
-    "from torch.autograd import Variable\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "from torch.utils.data.sampler import SubsetRandomSampler\n",
-    "\n",
-    "from PIL import Image\n",
-    "\n",
-    "import skimage\n",
-    "from skimage import img_as_float, img_as_ubyte\n",
-    "from skimage.io import imread\n",
-    "from skimage.color import rgb2grey\n",
-    "\n",
-    "import sklearn\n",
-    "from sklearn.model_selection import train_test_split as train_test_split_sk\n",
-    "\n",
-    "import cv2\n",
-    "\n",
-    "\n",
-    "class NucleusDataset(Dataset):\n",
-    "    \"\"\"Nucleus dataset.\"\"\"\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def read_and_stack(in_img_list):\n",
-    "        return np.sum(np.stack([i*(imread(c_img)>0) for i, c_img in enumerate(in_img_list, 1)], 0), 0)\n",
-    "        #r = (reduce(\n",
-    "        #        np.bitwise_or, [\n",
-    "        #            np.asarray(Image.open(c_img)) for c_img in iter(in_img_list)])).astype(np.uint8)\n",
-    "        #r = r / r.max()\n",
-    "        return r\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def read_image(in_img_list):\n",
-    "        #img = img_as_float(rgb2hsv(rgba2rgb(io.imread(in_img_list[0]))))\n",
-    "        img = Image.open(in_img_list[0])\n",
-    "        return np.array(img.convert('RGB')), img.size\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def as_segmentation(img):\n",
-    "        return (img>0).astype(int)\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def is_inverted(img, invert_thresh_pd=10.0):\n",
-    "        img_grey = img_as_ubyte(rgb2grey(img))\n",
-    "        img_th = cv2.threshold(img_grey,0,255,cv2.THRESH_OTSU)[1]\n",
-    "        return np.sum(img_th==255)>((invert_thresh_pd/10.0)*np.sum(img_th==0))\n",
-    "\n",
-    "    def __init__(\n",
-    "            self,\n",
-    "            root_dir=None,\n",
-    "            stage_name='stage1',\n",
-    "            group_name='train',\n",
-    "            transform=None):\n",
-    "        \"\"\"\n",
-    "        Args:\n",
-    "            root_dir (string): Directory with all the images.\n",
-    "            transform (callable, optional): Optional transform to be applied\n",
-    "                on a sample.\n",
-    "        \"\"\"\n",
-    "\n",
-    "        self.root_dir = root_dir\n",
-    "        self.transform = transform\n",
-    "\n",
-    "        if root_dir is None:\n",
-    "            return\n",
-    "\n",
-    "        all_images = glob(\n",
-    "            os.path.join(\n",
-    "                root_dir,\n",
-    "                stage_name +\n",
-    "                '_*',\n",
-    "                '*',\n",
-    "                '*',\n",
-    "                '*'))\n",
-    "        \n",
-    "        img_df = pd.DataFrame({'path': all_images})\n",
-    "\n",
-    "        def img_id(in_path): return in_path.split('/')[-3]\n",
-    "\n",
-    "        def img_type(in_path): return in_path.split('/')[-2]\n",
-    "\n",
-    "        def img_group(in_path): return in_path.split('/')[-4].split('_')[1]\n",
-    "\n",
-    "        def img_stage(in_path): return in_path.split('/')[-4].split('_')[0]\n",
-    "        img_df['id'] = img_df['path'].map(img_id)\n",
-    "        img_df['type'] = img_df['path'].map(img_type)\n",
-    "        img_df['group'] = img_df['path'].map(img_group)\n",
-    "        img_df['stage'] = img_df['path'].map(img_stage)\n",
-    "        self.img_df = img_df\n",
-    "\n",
-    "        data_df = img_df.query('group==\"%s\"' % group_name)\n",
-    "        data_rows = []\n",
-    "        group_cols = ['stage', 'id']\n",
-    "        for n_group, n_rows in data_df.groupby(group_cols):\n",
-    "            c_row = {\n",
-    "                col_name: col_value for col_name,\n",
-    "                col_value in zip(\n",
-    "                    group_cols,\n",
-    "                    n_group)}\n",
-    "            c_row['masks'] = n_rows.query('type == \"masks\"')[\n",
-    "                'path'].values.tolist()\n",
-    "            c_row['images'] = n_rows.query('type == \"images\"')[\n",
-    "                'path'].values.tolist()\n",
-    "            data_rows += [c_row]\n",
-    "\n",
-    "        data_df = pd.DataFrame(data_rows)\n",
-    "\n",
-    "        ret = data_df['images'].map(self.read_image)\n",
-    "        #(data_df['images'], data_df['format'], data_df['mode'], data_df['size']) = ([x[i] for x in ret] for i in range(4))\n",
-    "        (data_df['images'], data_df['size']) = ([x[i] for x in ret] for i in range(2))\n",
-    "    \n",
-    "        data_df['masks'] = data_df['masks'].map(\n",
-    "            self.read_and_stack).map(\n",
-    "            lambda x: x.astype(np.uint8))\n",
-    "\n",
-    "        data_df['masks_seg'] = data_df['masks'].map(self.as_segmentation)\n",
-    "        data_df['inv'] = data_df['images'].map(self.is_inverted)\n",
-    "\n",
-    "        self.data_df = data_df\n",
-    "\n",
-    "        \n",
-    "    def __len__(self):\n",
-    "        return self.data_df.shape[0]\n",
-    "\n",
-    "    \n",
-    "    def __getitem__(self, idx):\n",
-    "\n",
-    "        sample = self.data_df[\"images\"].iloc[idx]\n",
-    "        masks =  self.data_df[\"masks\"].iloc[idx]\n",
-    "        masks_seg =  self.data_df[\"masks_seg\"].iloc[idx]\n",
-    "        if self.transform:\n",
-    "            sample, masks, masks_seg = self.transform(sample, masks, masks_seg)\n",
-    "\n",
-    "        return sample, (masks, masks_seg)\n",
-    "    \n",
-    "    \n",
-    "    def train_test_split(self, **options):\n",
-    "        \"\"\" Return a list of splitted indices from a DataSet.\n",
-    "        Indices can be used with DataLoader to build a train and validation set.\n",
-    "\n",
-    "        Arguments:\n",
-    "            A Dataset\n",
-    "            A test_size, as a float between 0 and 1 (percentage split) or as an int (fixed number split)\n",
-    "            Shuffling True or False\n",
-    "            Random seed\n",
-    "        \"\"\"\n",
-    "   \n",
-    "        df_train, df_test = train_test_split_sk(self.data_df, **options)\n",
-    "        dset_train = NucleusDataset(transform=self.transform)\n",
-    "        dset_train.data_df = df_train\n",
-    "\n",
-    "        dset_test = NucleusDataset(transform=self.transform)\n",
-    "        dset_test.data_df = df_test\n",
-    "\n",
-    "        return dset_train, dset_test\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 629,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'main' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-629-c9e108041e49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mdset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNucleusDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdsb_data_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstage_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_transform\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# hack: this image format (1388, 1040) occurs only ones, stratify complains ..\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'main' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "import transform\n",
-    "from transform import random_rotate90_transform2\n",
-    "import torchvision\n",
-    "from torchvision.transforms import ToTensor, ToPILImage\n",
-    "\n",
-    "#Note: for image and mask, there is no compatible solution that can use transforms.Compse(), see https://github.com/pytorch/vision/issues/9\n",
-    "#transformations = transforms.Compose([random_rotate90_transform2(),transforms.ToTensor(),])\n",
-    "\n",
-    "def train_transform(img, mask, mask_seg):\n",
-    "    # HACK (make dims consistent, first one is channels)\n",
-    "    if len(mask.shape) == 2:\n",
-    "        mask = np.expand_dims(mask, 2)\n",
-    "    if len(mask_seg.shape) == 2:\n",
-    "        mask_seg = np.expand_dims(mask_seg, 2)\n",
-    "    img, mask, mask_seg = random_rotate90_transform2(0.5, img, mask, mask_seg)\n",
-    "    img = ToTensor()(img)\n",
-    "    mask = torch.from_numpy(np.transpose(mask, (2, 0, 1))).float()\n",
-    "    mask_seg = torch.from_numpy(np.transpose(mask_seg, (2, 0, 1))).float()\n",
-    "    return img, mask, mask_seg\n",
+    "import utils\n",
+    "import main\n",
     "\n",
     "dsb_data_dir = os.path.join('..', '..', 'input')\n",
     "stage_name = 'stage1'\n",
-    "#dset = NucleusDataset(dsb_data_dir, stage_name,transform=train_transform)\n",
-    "dset.transform=train_transform\n",
-    "#dset_save = dset\n",
-    "#train_idx, valid_idx = train_valid_split(dset,test_size=0.05,random_seed=1,shuffle=True)\n",
-    "#train_sampler = SubsetRandomSampler(train_idx)\n",
-    "#valid_sampler = SubsetRandomSampler(valid_idx)\n",
-    "#train_loader = DataLoader(dset,batch_size=1,sampler=train_sampler,num_workers=4)\n",
-    "#valid_loader = DataLoader(dset,batch_size=1,sampler=valid_sampler,num_workers=4)\n",
+    "\n",
+    "\n",
+    "dset = NucleusDataset(dsb_data_dir, stage_name, transform=main.train_transform)\n",
     "\n",
     "# hack: this image format (1388, 1040) occurs only ones, stratify complains .. \n",
     "dset.data_df = dset.data_df[dset.data_df['size'] != (1388, 1040)]\n",
